test/visibility/private/lydia/siblingSubmodule.good
siblingSubmodule.chpl:9: error: Cannot access module 'child'
